Header visual changes.

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -1,4 +1,5 @@
 {
-  "header": "Header is here",
-  "footer": "Footer is here"
+  "header": "My movie Library",
+  "footer": "Footer is here",
+  "search": "Search"
 }
