--- a/public/locales/se.json
+++ b/public/locales/se.json
@@ -1,4 +1,5 @@
 {
-  "header": "Header är här",
-  "footer": "Footer är här"
+  "header": "My movie Library",
+  "footer": "Footer är här",
+  "search": "Sök"
 }
