Added new texts and languages.

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -1,5 +1,7 @@
 {
   "header": "My movie Library",
   "footer": "Footer is here",
-  "search": "Search"
+  "search": "Search",
+  "release_date": "Release date",
+  "tagline": "Tagline"
 }
