Added styles and translations for the Movie component.

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -4,10 +4,13 @@
   "search": "Search",
   "release_date": "Release date",
   "tagline": "Tagline",
+  "homepage": "Homepage",
   "genres": "Genres",
   "budget": "Budget",
   "revenue": "Revenue",
   "runtime": "Runtime",
+  "min": " min",
+  "popularity": "Popularity",
   "overview": "Overview",
   "production_countries": "Production countries",
   "production_companies": "Production companies"
