Added Error component and texts. Fixed errors.

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -13,5 +13,6 @@
   "popularity": "Popularity",
   "overview": "Overview",
   "production_countries": "Production countries",
-  "production_companies": "Production companies"
+  "production_companies": "Production companies",
+  "error_title": "Unfortunately, the search for your query ended with an error: "
 }
