Added Movies list component. Implemented two searches: for the list and for one movie.

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -14,5 +14,7 @@
   "overview": "Overview",
   "production_countries": "Production countries",
   "production_companies": "Production companies",
-  "error_title": "Unfortunately, the search for your query ended with an error: "
+  "error_title": "Unfortunately, the search for your query ended with an error: ",
+  "pages": "Page {{num}} from {{total}}",
+  "total": "{{total}} results found"
 }
