--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -14,5 +14,7 @@
   "overview": "Обзор",
   "production_countries": "Страна",
   "production_companies": "Компания",
-  "error_title": "К сожалению, поиск по вашему запросу закончился с ошибкой: "
+  "error_title": "К сожалению, поиск по вашему запросу закончился с ошибкой: ",
+  "pages": "Страница {{num}} из {{total}}",
+  "back": "Вернуться к результатам поиска"
 }
