--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -16,5 +16,11 @@
   "production_companies": "Компания",
   "error_title": "К сожалению, поиск по вашему запросу закончился с ошибкой: ",
   "pages": "Страница {{num}} из {{total}}",
-  "back": "Вернуться к результатам поиска"
+  "back": "Вернуться к результатам поиска",
+  "watchlist": "Избранное",
+  "favorites": "Любимые",
+  "username": "Имя пользователя",
+  "password": "Пароль",
+  "login": "Войти",
+  "logout": "Выйти"
 }
